# cudax

./: README.md
samples/: 11_index calculation for 2D grid 2D thread blocks.cu  14_sum_array.cu  9_unique_index_calculation_threadIdx_blockIdx_blockDim.cu  kernel.cu
test1/: CMakeLists.txt
test2/: CMakeLists.txt  cuda_common.cu  cuda_common.cuh  main.cu
